--- a/lib/lightbox/css/lightbox.css
+++ b/lib/lightbox/css/lightbox.css
@@ -181,7 +181,7 @@ html.lb-disable-scrolling {
   clear: left;
   padding-bottom: 1em;
   font-size: 12px;
-  color: #999999;
+  color: #f5f5f5;
 }
 
 .lb-data .lb-close {
